--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,7 +19,7 @@ body,
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #925fff #d1d1d1;
+  scrollbar-color: #0091ff8f #d1d1d17c;
 }
 
 /* Chrome, Edge, and Safari */
